src/assets/css/main.css
:root {
	--mint-gray: #191919;
	--mint-cyan: #7aecfd;
	--mint-yellow: #dafc7c;

	--family-primary: 'Red Hat Text', sans-serif;
	--family-secondary: 'Silkscreen', sans-serif;
	--family-tertiary: 'Odibee Sans', sans-serif;
	--family-monospace: 'Fira Code', monospace;

	--orange: #fcb57d;
	--yellow: var(--mint-yellow);
	--green: #7afc94;
	--turquoise: #7aedfc;
	--cyan: var(--mint-cyan);
	--blue: #7a82fc;
	--purple: #e07afc;
	--red: #fc7dad;

	--background: var(--mint-gray);
	--background-transparent: #191919e0;
	--bg-backdrop: blur(20px);
	--black: #131313;
	--white: #fff;

	--link: var(--mint-yellow);
	--primary: var(--mint-cyan);
	--radius-large: 3rem;
	--radius-medium: 1.5rem;
	--radius: 0.7rem;

	--mainWidth: 1200px;
	--padding-Main: 5rem;

	--bg-blur: 300px;

	--transition-fast: 200ms;
	--transition-medium: 350ms;
	--transition-slow: 500ms;

	/* #region ------------------------------ FontFaces ------------------------------ */

	/* odibee-sans-regular - latin */
	@font-face {
		font-display: swap;
		font-family: 'Odibee Sans';
		font-style: normal;
		font-weight: 400;
		src: url('../assets/fonts/odibee-sans-v20-latin-regular.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* red-hat-text-regular - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Red Hat Text';
		font-style: normal;
		font-weight: 400;
		src: url('../assets/fonts/red-hat-text-v19-latin_latin-ext-regular.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* red-hat-text-italic - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Red Hat Text';
		font-style: italic;
		font-weight: 400;
		src: url('../assets/fonts/red-hat-text-v19-latin_latin-ext-italic.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* red-hat-text-700 - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Red Hat Text';
		font-style: normal;
		font-weight: 700;
		src: url('../assets/fonts/red-hat-text-v19-latin_latin-ext-700.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* red-hat-text-700italic - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Red Hat Text';
		font-style: italic;
		font-weight: 700;
		src: url('../assets/fonts/red-hat-text-v19-latin_latin-ext-700italic.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* fira-code-regular - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Fira Code';
		font-style: normal;
		font-weight: 400;
		src: url('../assets/fonts/fira-code-v27-latin_latin-ext-regular.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* fira-code-700 - latin_latin-ext */
	@font-face {
		font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
		font-family: 'Fira Code';
		font-style: normal;
		font-weight: 700;
		src: url('../assets/fonts/fira-code-v27-latin_latin-ext-700.woff2')
			format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
	}

	/* #endregion ------------------------------ FontFaces ------------------------------ */

	color: var(--white);
}

body {
	background: var(--black);
	font-family: var(--family-primary);
	min-height: 100vh;
	padding-top: 3rem;
}

body::after {
	content: '';
	position: absolute;
	width: calc(var(--mainWidth) + (var(--bg-blur) / 2));
	height: 100%;
	background: #000;
	opacity: 0.75;
	filter: blur(var(--bg-blur));
	z-index: -1;
	top: 0;
	left: 50%;
	transform: translateX(-50%);
	position: fixed;
	backdrop-filter: blur(var(--bg-blur));
}

/* #region ------------------------------ Main ------------------------------ */

#mainWrap {
	margin: 0 auto;
	max-width: var(--mainWidth);
	isolation: isolate;
	display: flex;
	flex-direction: column;
	gap: 3rem;
	padding-bottom: 3rem;
	position: relative;
}

#mainWrap > main > section {
	background: var(--background-transparent);
	backdrop-filter: var(--bg-backdrop);
	border-radius: var(--radius-large);
	position: relative;
	padding: var(--padding-Main);
}

/* #endregion ------------------------------ Main ------------------------------ */

/* #region ------------------------------ Nav ------------------------------ */

#navWrap {
	padding-bottom: 3rem;
	max-width: var(--mainWidth);
	margin: 0 auto;
	position: relative;
	z-index: 1000;
}

#mainNav {
	border-radius: var(--radius-large);
	top: 0;
	transition: top, border-radius;
	transition-duration: var(--transition-medium);
}

#mainNav.sticky {
	padding-inline: 0;
	position: fixed;
	max-width: var(--mainWidth);
	top: 0;
	left: 0;
	right: 0;
	z-index: 1000;
	width: 100%;
	margin: 0 auto;
}

#mainNav .navBG {
	padding: 3rem;
	margin: 0;
	position: relative;
}

#mainNav .navBG::after {
	content: '';
	position: absolute;
	inset: 0;
	border-radius: var(--radius-large);
	background: var(--background-transparent);
	backdrop-filter: var(--bg-backdrop);
	transition: inset, box-shadow;
	transition-duration: var(--transition-medium);
	z-index: -1;
}

#mainNav.sticky .navBG::after {
	inset: 15px;
	border-top-left-radius: var(--radius-medium);
	border-top-right-radius: var(--radius-medium);
	border-radius: var(--radius-medium);
}

#mainNav .navBG::before {
	content: '';
	position: absolute;
	width: calc(100% - (var(--bg-blur) / 2));
	height: calc(100% - (var(--bg-blur) / 2));
	background: #000;
	opacity: 0.5;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: -1;
	filter: blur(20px);
	transition: width, height, opacity;
	transition-duration: var(--transition-medium);
	border-radius: var(--radius-large);
}

#mainNav.sticky .navBG::before {
	width: 100%;
	height: calc(100% + 40px);
}

#mainNav ul {
	display: flex;
	flex-wrap: wrap;
	gap: 1rem;
	z-index: 100;
	top: 0;
	left: 0;
	padding: 0;
	justify-content: center;
}

#mainNav ul > li {
	display: inline-block;
	position: relative;
}

#mainNav ul > li ul {
	display: flex;
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	top: 100%;
	padding: 1.5rem;
	pointer-events: none;
	transition: opacity, margin-top, scale;
	transition-duration:  var(--transition-medium);
	opacity: 0;
	margin-top: 0;
	scale: .8;
	transform-origin: top left;
}

#mainNav ul > li ul::after {
	content: '';
	position: absolute;
	width: 100%;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	height: 100%;
	z-index: -1;
	background: var(--background-transparent);
	backdrop-filter: blur(var(--bg-blur));
	border-radius: var(--radius);
}

#mainNav ul > li ul::before {
	content: '';
	position: absolute;
	width: 100%;
	height: calc(100% + 20px);
	background: linear-gradient(to bottom, transparent 20px, #000 20px);
	opacity: 0.5;
	top: -15px;
	left: 50%;
	transform: translate(-50%, 0);
	z-index: -1;
	filter: blur(20px);
	transition: width, height, opacity;
	transition-duration: var(--transition-medium);
}


#mainNav ul > li:is(:hover, :focus) ul {
	opacity: 1;
	pointer-events: all;
	margin-top: 15px;
	scale: 1;
}

/* #endregion ------------------------------ Nav ------------------------------ */

canvas {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	z-index: -1;
}

nav.navbar {
	border-radius: var(--bulma-radius);
}

pre {
	border-radius: var(--bulma-radius);
}

.code-toolbar {
	position: relative;

	& > .toolbar {
		position: absolute;
		top: 5px;
		right: 5px;
		display: flex;
		flex-wrap: wrap;
		gap: 5px;

		& > .toolbar-item {
			& > * {
				padding: 8px 15px;
				background: var(--grey);
				display: inline-block;
				height: 100%;
				font-family: var(--family-primary);
			}

			&:first-of-type > * {
				border-radius: 0 0 0 var(--toolbar-item-radius);
			}
			&:last-of-type > * {
				border-radius: 0 var(--toolbar-item-radius) 0 0;
			}
		}
	}
}

pre > code {
	tab-size: 3;

	& .token {
		&.selector {
			color: var(--yellow);

			& > .class {
				color: var(--orange);
			}

			& > .id {
				color: var(--red);
			}
		}
		&.punctuation {
			color: var(--white);
		}
		&:is(.property) {
			color: var(--cyan);

			& > .class {
				color: var(--orange);
			}

			& > .id {
				color: var(--red);
			}
		}

		&.function {
			color: var(--green);
		}
		&.variable {
			color: var(--green);
		}
	}
}

